Docs overhaul: uniform per-crate pattern, drop /docs aggregate, move assets to root